# alimentify_backend

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
src/handlers/: auth.rs  chat.rs  dashboard.rs  food_wiki.rs  health.rs  meals.rs  mod.rs  nutrition.rs  nutrition_info.rs  recipes.rs  reports.rs  status.rs
src/middleware/: api_key.rs  auth.rs  cors.rs  mod.rs
src/services/: auth_service.rs  chat_agent_service.rs  email_service.rs  fdc_service.rs  gemini_service.rs  mealdb_service.rs  mod.rs  ninja_service.rs
views/: docs.html  index.html
